noinst_LTLIBRARIES  =	libdoverdrive.la

libdoverdrive_la_SOURCES =	@top_srcdir@/include/Ammunition.h \
				@top_srcdir@/include/Armor.h \
				@top_srcdir@/include/BeamWeapon.h \
				@top_srcdir@/include/Capacitor.h \
				@top_srcdir@/include/CapacitorModule.h \
				@top_srcdir@/include/CombatUnit.h \
				@top_srcdir@/include/DamageType.h \
				@top_srcdir@/include/ECM.h \
				@top_srcdir@/include/FighterBay.h \
				@top_srcdir@/include/Fighter.h \
				@top_srcdir@/include/FileSystem.h \
				@top_srcdir@/include/Fireable.h \
				@top_srcdir@/include/Gun.h \
				@top_srcdir@/include/Impactable.h \
				@top_srcdir@/include/InsufficientBaysException.h \
				@top_srcdir@/include/InsufficientPowerException.h \
				@top_srcdir@/include/InvalidPathNameException.h \
				@top_srcdir@/include/Launcher.h \
				@top_srcdir@/include/LoadFileException.h \
				@top_srcdir@/include/LDException.h \
				@top_srcdir@/include/Missile.h \
				@top_srcdir@/include/MissileLauncher.h \
				@top_srcdir@/include/Module.h \
				@top_srcdir@/include/OutOfDomainException.h \
				@top_srcdir@/include/PassiveModule.h \
				@top_srcdir@/include/Power.h \
				@top_srcdir@/include/PowerSuppliable.h \
				@top_srcdir@/include/Sensor.h \
				@top_srcdir@/include/Shield.h \
				@top_srcdir@/include/Ship.h \
				@top_srcdir@/include/Soakable.h \
				@top_srcdir@/include/Thruster.h \
				@top_srcdir@/include/UserData.h \
				@top_srcdir@/include/WarpDrive.h \
				@top_srcdir@/include/Weapon.h \
				@top_srcdir@/include/WriteFileException.h \
				@top_srcdir@/include/XmlSerialization.h \
				@top_srcdir@/include/CombatUnitId.h \
				@top_srcdir@/include/Message.h \
				@top_srcdir@/include/UPQueue.h \
				@top_srcdir@/include/Movement.h \
				@top_srcdir@/include/Network.h \
				@top_srcdir@/include/DumbMovement.h \
				@top_srcdir@/include/XmlSerializationException.h \
				FileSystem.cpp \
				LDException.cpp \
				Power.cpp \
				XmlSerialization.cpp \
				PowerSuppliable.cpp \
				Capacitor.cpp \
				DamageType.cpp \
				Damage.cpp \
				Module.cpp \
				CombatUnitId.cpp \
				Message.cpp \
				UPQueue.cpp \
				Network.cpp \
				DumbMovement.cpp \
				CapacitorModule.cpp \
				ECM.cpp \
				ReactorModule.cpp \
				PassiveModule.cpp \
				Shield.cpp \
				Thruster.cpp


libdoverdrive_la_CXXFLAGS = @LIBXML2_CFLAGS@ -I@top_srcdir@/include/ 
libdoverdrive_la_LIBADD = @LIBXML2_LIBS@