SUBDIRS = 	OutOfDomainExceptionTest \
		LDExceptionTest \
		PowerTest \
		XmlSerializationTest \
		PowerSuppliableTest \
		CapacitorTest \
		DamageTypeTest \
		DamageTest \
		ModuleTest \
		CombatUnitIdTest \
		MessageTest \
		UPQueueTest \
		NetworkTest \
		DumbMovementTest \
		ECMTest \
		ShieldTest \
		XmlSerializationExceptionTest